--- a/templates/line20/index.html
+++ b/templates/line20/index.html
@@ -81,7 +81,7 @@
           }],
           xAxes: [{
             scaleLabel:{
-              display: true,
+              display: false,
               labelString: 'Monthly Residential Marshall Evictions in NYC (Jan 2019 - March 2020)'
             },
             ticks: {
