--- a/templates/linechartmulti25/index.html
+++ b/templates/linechartmulti25/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Number of Jobs in Arts Sector in NYC (2019 vs 2020)</title>
+  <title>Daily Homeless Population, NYC Department of Homeless Services, 2019 - 2020</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
   <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -17,7 +17,13 @@
   //CHART JS
   Chart.defaults.global.legend.display = true,
   //Chart.defaults.global.defaultFontFamily = 'open sans'
-Chart.defaults.global.title.display = true
+  Chart.defaults.global.title.display = true
+
+  const xs = [];
+  const ys = [];
+  const ys2 = [];
+  const ys3 = [];
+  const pointBorderColors = [];
 
   chartIt();
 
@@ -33,19 +39,20 @@ Chart.defaults.global.title.display = true
           data: data.ys,
           fill: false,
           lineTension: 0.5,
-          backgroundColor:"#800000",
-          borderColor: "#800000",
+          backgroundColor:"#CACACA",
+          borderColor: "#CACACA",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#800000",
-          pointBackgroundColor: "#800000",
+          pointBorderColor: "#CACACA",
+          //pointBorderColor: pointBorderColors,
+          pointBackgroundColor: "#CACACA",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#800000",
-          pointHoverBorderColor: "#800000",
+          pointHoverBackgroundColor: "#CACACA",
+          pointHoverBorderColor: "#CACACA",
           pointHoverBorderWidth: 2,
           pointRadius: 1,
           pointHitRadius: 4,
@@ -57,19 +64,21 @@ Chart.defaults.global.title.display = true
           data: data.ys2,
           fill: false,
           lineTension: 0.5,
-          backgroundColor:"#CACACA",
-          borderColor: "#CACACA",
+          backgroundColor:"#E6E6E6",
+          borderColor: "#E6E6E6",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#CACACA",
+          pointBorderColor: "#E6E6E6",
+          //pointBorderColor: pointBorderColors,
+          pointBackgroundColor: "#E6E6E6",
+
           pointBorderWidth: 4,
           pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#CACACA",
-          pointHoverBorderColor: "#CACACA",
+          pointHoverBackgroundColor: "#E6E6E6",
+          pointHoverBorderColor: "#E6E6E6",
           pointHoverBorderWidth: 2,
           pointRadius: 1,
           pointHitRadius: 4,
@@ -81,19 +90,20 @@ Chart.defaults.global.title.display = true
           data: data.ys3,
           fill: false,
           lineTension: 0.5,
-          backgroundColor:"#CACACA",
-          borderColor: "#CACACA",
+          backgroundColor:"#666666",
+          borderColor: "#666666",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#CACACA",
+          pointBorderColor: "#666666",
+          //  pointBorderColor: pointBorderColors,
+          pointBackgroundColor: "#666666",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#CACACA",
-          pointHoverBorderColor: "#CACACA",
+          pointHoverBackgroundColor: "#666666",
+          pointHoverBorderColor: "#666666",
           pointHoverBorderWidth: 2,
           pointRadius: 1,
           pointHitRadius: 4,
@@ -112,9 +122,6 @@ Chart.defaults.global.title.display = true
         yAxes: [{
           stacked: false,
           ticks: {
-            //max: 5,
-            //min: 200000,
-            //stepSize: 200000,
             callback: function(value, index, values) {
               return value.toLocaleString('en-US')+'';
             },
@@ -139,9 +146,9 @@ Chart.defaults.global.title.display = true
             display: true
           },
           scaleLabel: {
-              display: true,
-              labelString: 'Daily Homeless Population, NYC Department of Homeless Services'
-            }
+            display: true,
+            labelString: 'Daily Homeless Population, NYC Department of Homeless Services'
+          }
         }]
       },
       tooltips: {
@@ -155,36 +162,67 @@ Chart.defaults.global.title.display = true
         //  borderWidth: 1,
         displayColors: false
       }
+      /*,
+      annotation: {
+        events: ["click"],
+        annotations: [
+          {
+            drawTime: "beforeDatasetsDraw",
+            type: "box",
+            xScaleID: "x-axis-0",
+            yScaleID: "y-axis-0",
+            xMin: "3/22/2020",
+            xMax: "1/9/2021",
+            yMin: 0,
+            yMax: 40000,
+            backgroundColor: "#B63F26",
+            borderColor: "#B63F26",
+            borderWidth: 1,
+            onClick: function(e) {
+              console.log("Box", e.type, this);
+            }
+          }]
+        } */
+      }
+      });
+      //Color COVID lockdown date
+      for (i = 0; i < myChart.data.datasets[0].data.length; i++) {
+        if (myChart.data.datasets[0].data[i].y == "3/22/2020") {
+          pointBorderColors.push("#B63F26");
+        } else {
+          pointBorderColors.push("#2F56A6");
+        }
+      }
+
+      myChart.update();
     }
-  });
-}
-//SPLITTING AND BRINGING IN CSV DATA
-async function getData() {
-  const xs = [];
-  const ys = [];
-  const ys2 = [];
-  const ys3 = [];
-
-  const response = await fetch('daily_dhs_pop.csv');
-  const data = await response.text();
-
-  const table = data.split('\n').slice(1);
-  table.forEach(row => {
-    const columns = row.split(',');
-    const date = columns[0];
-    xs.push(date);
-    const adult = columns[1];
-    ys.push(parseFloat(adult)); //make data from string to number
-    const family = columns[2];
-    ys2.push(parseFloat(family)); //make data from string to number
-    const familyChildren = columns[3];
-    ys3.push(parseFloat(familyChildren)); //make data from string to number
-    console.log(date, adult, family, familyChildren);
-  });
-  return { xs, ys, ys2, ys3 };
-}
 
 
-</script>
-</body>
-</html>
+
+    //SPLITTING AND BRINGING IN CSV DATA
+    async function getData() {
+
+
+      const response = await fetch('daily_dhs_pop.csv');
+      const data = await response.text();
+
+      const table = data.split('\n').slice(1);
+      table.forEach(row => {
+        const columns = row.split(',');
+        const date = columns[0];
+        xs.push(date);
+        const adult = columns[1];
+        ys.push(parseFloat(adult)); //make data from string to number
+        const family = columns[2];
+        ys2.push(parseFloat(family)); //make data from string to number
+        const familyChildren = columns[3];
+        ys3.push(parseFloat(familyChildren)); //make data from string to number
+        console.log(date, adult, family, familyChildren);
+      });
+      return { xs, ys, ys2, ys3 };
+    }
+
+
+    </script>
+    </body>
+    </html>
