--- a/templates/groupedbar01/index.html
+++ b/templates/groupedbar01/index.html
@@ -30,7 +30,7 @@
       data: {
         labels: data.xs,
         datasets: [{
-          label: 'Nov 2019 Unemployment Rate',
+          label: 'Nov 2019',
           data: data.ys2,
           fill: false,
           backgroundColor: '#2F56A6',
@@ -41,7 +41,7 @@
           barPercentage: .8
         },
         {
-          label: 'Nov 2020 Unemployment Rate',
+          label: 'Nov 2020',
           data: data.ys,
           fill: false,
           backgroundColor: '#CACACA',
