removed x axis labels

--- a/templates/groupedbar01/index.html
+++ b/templates/groupedbar01/index.html
@@ -85,7 +85,7 @@
               display: false
             },
             scaleLabel: {
-              display: true,
+              display: false,
               labelString: 'Unemployment Rate by Borough, Nov 2019 vs Nov 2020'
             }
           }]
