--- a/templates/linechartmulti26/index.html
+++ b/templates/linechartmulti26/index.html
@@ -115,7 +115,7 @@ Chart.defaults.global.title.display = true
             display: true
           },
           scaleLabel: {
-              display: true,
+              display: false,
               labelString: 'Unemployment Rate in NYC, 2019 vs 2020'
             }
         }]
