udate colors and order of lines

--- a/templates/linechartmulti25/index.html
+++ b/templates/linechartmulti25/index.html
@@ -34,25 +34,51 @@
       type: 'line',
       data: {
         labels: data.xs,
-        datasets: [{
+        datasets: [
+          {
+            label: 'Families with Children',
+            data: data.ys3,
+            fill: false,
+            lineTension: 0.5,
+            backgroundColor:"#1D5FD6",
+            borderColor: "#1D5FD6",
+            borderWidth: 3,
+            borderCapStyle: 'butt',
+            borderDash: [],
+            borderDashOffset: 0.0,
+            //    borderJoinStyle: 'miter',
+            pointBorderColor: "#1D5FD6",
+            //  pointBorderColor: pointBorderColors,
+            pointBackgroundColor: "#1D5FD6",
+            pointBorderWidth: 4,
+            pointHoverRadius: 6,
+            pointHoverBackgroundColor: "#1D5FD6",
+            pointHoverBorderColor: "#1D5FD6",
+            pointHoverBorderWidth: 2,
+            pointRadius: 1,
+            pointHitRadius: 4,
+            hoverBackgroundColor: "#E6E6E6",
+            hoverBorderColor: "#E6E6E6",
+          },
+          {
           label: 'Single Adults',
           data: data.ys,
           fill: false,
           lineTension: 0.5,
-          backgroundColor:"#666666",
-          borderColor: "#666666",
+          backgroundColor:"#007534",
+          borderColor: "#007534",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#666666",
+          pointBorderColor: "#007534",
           //pointBorderColor: pointBorderColors,
-          pointBackgroundColor: "#666666",
+          pointBackgroundColor: "#007534",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#666666",
-          pointHoverBorderColor: "#666666",
+          pointHoverBackgroundColor: "#007534",
+          pointHoverBorderColor: "#007534",
           pointHoverBorderWidth: 2,
           pointRadius: 1,
           pointHitRadius: 4,
@@ -64,52 +90,28 @@
           data: data.ys2,
           fill: false,
           lineTension: 0.5,
-          backgroundColor:"#CACACA",
-          borderColor: "#CACACA",
+          backgroundColor:"#B63F26",
+          borderColor: "#B63F26",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#CACACA",
+          pointBorderColor: "#B63F26",
           //pointBorderColor: pointBorderColors,
-          pointBackgroundColor: "#CACACA",
+          pointBackgroundColor: "#B63F26",
 
           pointBorderWidth: 4,
           pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#CACACA",
-          pointHoverBorderColor: "#CACACA",
+          pointHoverBackgroundColor: "#B63F26",
+          pointHoverBorderColor: "#B63F26",
           pointHoverBorderWidth: 2,
           pointRadius: 1,
           pointHitRadius: 4,
           hoverBackgroundColor: "#E6E6E6",
           hoverBorderColor: "#E6E6E6",
         },
-        {
-          label: 'Families with Children',
-          data: data.ys3,
-          fill: false,
-          lineTension: 0.5,
-          backgroundColor:"#222222",
-          borderColor: "#222222",
-          borderWidth: 3,
-          borderCapStyle: 'butt',
-          borderDash: [],
-          borderDashOffset: 0.0,
-          //    borderJoinStyle: 'miter',
-          pointBorderColor: "#222222",
-          //  pointBorderColor: pointBorderColors,
-          pointBackgroundColor: "#222222",
-          pointBorderWidth: 4,
-          pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#222222",
-          pointHoverBorderColor: "#222222",
-          pointHoverBorderWidth: 2,
-          pointRadius: 1,
-          pointHitRadius: 4,
-          hoverBackgroundColor: "#E6E6E6",
-          hoverBorderColor: "#E6E6E6",
-        }
+
       ]
     },
     options: {
