--- a/templates/linechartmulti25/index.html
+++ b/templates/linechartmulti25/index.html
@@ -40,20 +40,20 @@
             data: data.ys3,
             fill: false,
             lineTension: 0.5,
-            backgroundColor:"#1D5FD6",
-            borderColor: "#1D5FD6",
+            backgroundColor:"#23417D",
+            borderColor: "#23417D",
             borderWidth: 3,
             borderCapStyle: 'butt',
             borderDash: [],
             borderDashOffset: 0.0,
             //    borderJoinStyle: 'miter',
-            pointBorderColor: "#1D5FD6",
+            pointBorderColor: "#23417D",
             //  pointBorderColor: pointBorderColors,
-            pointBackgroundColor: "#1D5FD6",
+            pointBackgroundColor: "#23417D",
             pointBorderWidth: 4,
             pointHoverRadius: 6,
-            pointHoverBackgroundColor: "#1D5FD6",
-            pointHoverBorderColor: "#1D5FD6",
+            pointHoverBackgroundColor: "#23417D",
+            pointHoverBorderColor: "#23417D",
             pointHoverBorderWidth: 2,
             pointRadius: 1,
             pointHitRadius: 4,
@@ -65,20 +65,20 @@
           data: data.ys,
           fill: false,
           lineTension: 0.5,
-          backgroundColor:"#007534",
-          borderColor: "#007534",
+          backgroundColor:"#222222",
+          borderColor: "#222222",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#007534",
+          pointBorderColor: "#222222",
           //pointBorderColor: pointBorderColors,
-          pointBackgroundColor: "#007534",
+          pointBackgroundColor: "#222222",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#007534",
-          pointHoverBorderColor: "#007534",
+          pointHoverBackgroundColor: "#222222",
+          pointHoverBorderColor: "#222222",
           pointHoverBorderWidth: 2,
           pointRadius: 1,
           pointHitRadius: 4,
@@ -86,7 +86,7 @@
           hoverBorderColor: "#E6E6E6",
         },
         {
-          label: 'Families',
+          label: 'Adult Families',
           data: data.ys2,
           fill: false,
           lineTension: 0.5,
@@ -108,8 +108,8 @@
           pointHoverBorderWidth: 2,
           pointRadius: 1,
           pointHitRadius: 4,
-          hoverBackgroundColor: "#E6E6E6",
-          hoverBorderColor: "#E6E6E6",
+          hoverBackgroundColor: "#B63F26",
+          hoverBorderColor: "#B63F26",
         },
 
       ]
