--- a/templates/linechartmulti27/index.html
+++ b/templates/linechartmulti27/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Unemployment Rate in NYC 2019 vs 2020</title>
+  <title>Homeless Shelter Population, by Age, Department of Homeless Services</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
   <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -29,7 +29,7 @@ Chart.defaults.global.title.display = true
       data: {
         labels: data.xs,
         datasets: [{
-          label: '2020: Unemployment Rate',
+          label: 'Age 0-17',
           data: data.ys,
           fill: false,
           lineTension: 0.5,
@@ -53,8 +53,80 @@ Chart.defaults.global.title.display = true
           hoverBorderColor: "#E6E6E6",
         },
         {
-          label: '2019: Unemployment Rate',
+          label: 'Age 18-29',
           data: data.ys2,
+          fill: false,
+          lineTension: 0.5,
+          backgroundColor:"#CACACA",
+          borderColor: "#CACACA",
+          borderWidth: 3,
+          borderCapStyle: 'butt',
+          borderDash: [],
+          borderDashOffset: 0.0,
+          //    borderJoinStyle: 'miter',
+          pointBorderColor: "#CACACA",
+          pointBackgroundColor: "#CACACA",
+          pointBorderWidth: 4,
+          pointHoverRadius: 6,
+          pointHoverBackgroundColor: "#CACACA",
+          pointHoverBorderColor: "#CACACA",
+          pointHoverBorderWidth: 2,
+          pointRadius: 1,
+          pointHitRadius: 4,
+          hoverBackgroundColor: "#E6E6E6",
+          hoverBorderColor: "#E6E6E6",
+        },
+        {
+          label: 'Age 30-44',
+          data: data.ys3,
+          fill: false,
+          lineTension: 0.5,
+          backgroundColor:"#2F56A6",
+          borderColor: "#2F56A6",
+          borderWidth: 3,
+          borderCapStyle: 'butt',
+          borderDash: [],
+          borderDashOffset: 0.0,
+          //    borderJoinStyle: 'miter',
+          pointBorderColor: "#2F56A6",
+          pointBackgroundColor: "#2F56A6",
+          pointBorderWidth: 4,
+          pointHoverRadius: 6,
+          pointHoverBackgroundColor: "#2F56A6",
+          pointHoverBorderColor: "#2F56A6",
+          pointHoverBorderWidth: 2,
+          pointRadius: 1,
+          pointHitRadius: 4,
+          hoverBackgroundColor: "#E6E6E6",
+          hoverBorderColor: "#E6E6E6",
+        },
+        {
+          label: 'Age 45-64',
+          data: data.ys4,
+          fill: false,
+          lineTension: 0.5,
+          backgroundColor:"#CACACA",
+          borderColor: "#CACACA",
+          borderWidth: 3,
+          borderCapStyle: 'butt',
+          borderDash: [],
+          borderDashOffset: 0.0,
+          //    borderJoinStyle: 'miter',
+          pointBorderColor: "#CACACA",
+          pointBackgroundColor: "#CACACA",
+          pointBorderWidth: 4,
+          pointHoverRadius: 6,
+          pointHoverBackgroundColor: "#CACACA",
+          pointHoverBorderColor: "#CACACA",
+          pointHoverBorderWidth: 2,
+          pointRadius: 1,
+          pointHitRadius: 4,
+          hoverBackgroundColor: "#E6E6E6",
+          hoverBorderColor: "#E6E6E6",
+        },
+        {
+          label: 'Age 65+',
+          data: data.ys5,
           fill: false,
           lineTension: 0.5,
           backgroundColor:"#CACACA",
@@ -82,7 +154,7 @@ Chart.defaults.global.title.display = true
       cornerRadius: 20,
       title:{
         display: false,
-        text: 'Unemployment Rate in NYC, 2019 vs 2020'
+        text: 'Homeless Shelter Population, by Age'
       },
       scales: {
         yAxes: [{
@@ -101,7 +173,7 @@ Chart.defaults.global.title.display = true
           },
           scaleLabel: {
             display: false,
-            labelString: 'Unemployment Rate in NYC, 2019 vs 2020'
+            labelString: 'Homeless Shelter Population, by Age'
           }
         }],
         xAxes: [{
@@ -116,14 +188,14 @@ Chart.defaults.global.title.display = true
           },
           scaleLabel: {
               display: false,
-              labelString: 'Unemployment Rate in NYC, 2019 vs 2020'
+              labelString: 'Homeless Shelter Population, by Age'
             }
         }]
       },
       tooltips: {
         callbacks: {
           label: function(tooltipItem, data) {
-            return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ '% Unemployment Rate';
+            return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ 'Population';
           },
         },
         //  backgroundColor: '#434343',
@@ -139,8 +211,11 @@ async function getData() {
   const xs = [];
   const ys = [];
   const ys2 = [];
+  const ys3 = [];
+  const ys4 = [];
+  const ys5 = [];
 
-  const response = await fetch('nyc_monthly_unemployment_rate.csv');
+  const response = await fetch('dhs_age_family_w_children.csv');
   const data = await response.text();
 
   const table = data.split('\n').slice(1);
@@ -148,13 +223,19 @@ async function getData() {
     const columns = row.split(',');
     const month = columns[0];
     xs.push(month);
-    const twenty20 = columns[1];
-    ys.push(parseFloat(twenty20)); //make data from string to number and added mean payers of 14 degrees
-    const twenty19 = columns[2];
-    ys2.push(parseFloat(twenty19)); //make data from string to number and added mean payers of 14 degrees
-    console.log(month, twenty20, twenty19);
+    const age1 = columns[1];
+    ys.push(parseFloat(age1)); //make data from string to number
+    const age2 = columns[2];
+    ys2.push(parseFloat(age2)); //make data from string to number
+    const age3 = columns[3];
+    ys3.push(parseFloat(age3)); //make data from string to number
+    const age4 = columns[4];
+    ys4.push(parseFloat(age4)); //make data from string to number
+    const age5 = columns[5];
+    ys5.push(parseFloat(age5)); //make data from string to number
+    console.log(month, age1, age2, age3, age4, age5);
   });
-  return { xs, ys, ys2 };
+  return { xs, ys, ys2, ys3, ys4, ys5 };
 }
 
 
