update titles and colors

--- a/templates/linechartmulti25/index.html
+++ b/templates/linechartmulti25/index.html
@@ -148,7 +148,7 @@
             display: true
           },
           scaleLabel: {
-            display: true,
+            display: false,
             labelString: 'Daily Homeless Population, NYC Department of Homeless Services'
           }
         }]
