--- a/templates/linechartmulti27/index.html
+++ b/templates/linechartmulti27/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-  <title>Homeless Shelter Population, by Age, Department of Homeless Services</title>
+  <title>Homeless Shelter Population, by Age, Families with Children, Department of Homeless Services</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
   <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-  <canvas id ="chart" width="800" height="400"></canvas>
+  <canvas id ="chart" width="300" height="400"></canvas>
   <script>
   //CHART JS
   Chart.defaults.global.legend.display = true,
@@ -33,19 +33,19 @@ Chart.defaults.global.title.display = true
           data: data.ys,
           fill: false,
           lineTension: 0.5,
-          backgroundColor:"#2F56A6",
-          borderColor: "#2F56A6",
+          backgroundColor:"#23417D",
+          borderColor: "#23417D",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#2F56A6",
-          pointBackgroundColor: "#2F56A6",
+          pointBorderColor: "#23417D",
+          pointBackgroundColor: "#23417D",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#2F56A6",
-          pointHoverBorderColor: "#2F56A6",
+          pointHoverBackgroundColor: "#23417D",
+          pointHoverBorderColor: "#23417D",
           pointHoverBorderWidth: 2,
           pointRadius: 1,
           pointHitRadius: 4,
@@ -57,19 +57,19 @@ Chart.defaults.global.title.display = true
           data: data.ys2,
           fill: false,
           lineTension: 0.5,
-          backgroundColor:"#CACACA",
-          borderColor: "#CACACA",
+          backgroundColor:"#222222",
+          borderColor: "#222222",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#CACACA",
+          pointBorderColor: "#222222",
+          pointBackgroundColor: "#222222",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#CACACA",
-          pointHoverBorderColor: "#CACACA",
+          pointHoverBackgroundColor: "#222222",
+          pointHoverBorderColor: "#222222",
           pointHoverBorderWidth: 2,
           pointRadius: 1,
           pointHitRadius: 4,
@@ -81,19 +81,19 @@ Chart.defaults.global.title.display = true
           data: data.ys3,
           fill: false,
           lineTension: 0.5,
-          backgroundColor:"#2F56A6",
-          borderColor: "#2F56A6",
+          backgroundColor:"#B63F26",
+          borderColor: "#B63F26",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#2F56A6",
-          pointBackgroundColor: "#2F56A6",
+          pointBorderColor: "#B63F26",
+          pointBackgroundColor: "#B63F26",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#2F56A6",
-          pointHoverBorderColor: "#2F56A6",
+          pointHoverBackgroundColor: "#B63F26",
+          pointHoverBorderColor: "#B63F26",
           pointHoverBorderWidth: 2,
           pointRadius: 1,
           pointHitRadius: 4,
@@ -105,19 +105,19 @@ Chart.defaults.global.title.display = true
           data: data.ys4,
           fill: false,
           lineTension: 0.5,
-          backgroundColor:"#CACACA",
-          borderColor: "#CACACA",
+          backgroundColor:"#666666",
+          borderColor: "#666666",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#CACACA",
+          pointBorderColor: "#666666",
+          pointBackgroundColor: "#666666",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#CACACA",
-          pointHoverBorderColor: "#CACACA",
+          pointHoverBackgroundColor: "#666666",
+          pointHoverBorderColor: "#666666",
           pointHoverBorderWidth: 2,
           pointRadius: 1,
           pointHitRadius: 4,
@@ -129,19 +129,19 @@ Chart.defaults.global.title.display = true
           data: data.ys5,
           fill: false,
           lineTension: 0.5,
-          backgroundColor:"#CACACA",
-          borderColor: "#CACACA",
+          backgroundColor:"#846126",
+          borderColor: "#846126",
           borderWidth: 3,
           borderCapStyle: 'butt',
           borderDash: [],
           borderDashOffset: 0.0,
           //    borderJoinStyle: 'miter',
-          pointBorderColor: "#CACACA",
-          pointBackgroundColor: "#CACACA",
+          pointBorderColor: "#846126",
+          pointBackgroundColor: "#846126",
           pointBorderWidth: 4,
           pointHoverRadius: 6,
-          pointHoverBackgroundColor: "#CACACA",
-          pointHoverBorderColor: "#CACACA",
+          pointHoverBackgroundColor: "#846126",
+          pointHoverBorderColor: "#846126",
           pointHoverBorderWidth: 2,
           pointRadius: 1,
           pointHitRadius: 4,
@@ -154,7 +154,7 @@ Chart.defaults.global.title.display = true
       cornerRadius: 20,
       title:{
         display: false,
-        text: 'Homeless Shelter Population, by Age'
+        text: 'Families with Children, by Age'
       },
       scales: {
         yAxes: [{
@@ -164,7 +164,7 @@ Chart.defaults.global.title.display = true
             //min: 200000,
             //stepSize: 200000,
             callback: function(value, index, values) {
-              return value.toLocaleString('en-US')+'%';
+              return value.toLocaleString('en-US');
             },
             beginAtZero: true,
           },
@@ -172,8 +172,8 @@ Chart.defaults.global.title.display = true
             display: true
           },
           scaleLabel: {
-            display: false,
-            labelString: 'Homeless Shelter Population, by Age'
+            display: true,
+            labelString: 'Families with Children, by Age'
           }
         }],
         xAxes: [{
@@ -188,14 +188,18 @@ Chart.defaults.global.title.display = true
           },
           scaleLabel: {
               display: false,
-              labelString: 'Homeless Shelter Population, by Age'
-            }
+              labelString: 'Families with Children, by Age'
+            },
+            ticks: {
+              autoSkip: true,
+              maxTicksLimit: 20
+    }
         }]
       },
       tooltips: {
         callbacks: {
           label: function(tooltipItem, data) {
-            return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ 'Population';
+            return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+' Families with Children';
           },
         },
         //  backgroundColor: '#434343',
