--- a/templates/linechartmulti29/index.html
+++ b/templates/linechartmulti29/index.html
@@ -187,7 +187,7 @@ Chart.defaults.global.title.display = true
             display: true
           },
           scaleLabel: {
-              display: false,
+              display: true,
               labelString: 'Adult Families, by Age'
             },
             ticks: {
