--- a/templates/linechartmulti25/index.html
+++ b/templates/linechartmulti25/index.html
@@ -150,7 +150,11 @@
           scaleLabel: {
             display: false,
             labelString: 'Daily Homeless Population, NYC Department of Homeless Services'
-          }
+          },
+          ticks: {
+            autoSkip: true,
+            maxTicksLimit: 15
+  }
         }]
       },
       tooltips: {
