--- a/templates/doughnut41/index.html
+++ b/templates/doughnut41/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-  <canvas id ="chart" width="800" height="400"></canvas>
+  <canvas id ="chart" width=auto height="250"></canvas>
   <script>
   //CHART JS
   Chart.defaults.global.responsive = true,
