--- a/templates/line20/index.html
+++ b/templates/line20/index.html
@@ -114,7 +114,7 @@
     const xs = [];
     const ys = [];
 
-    const response = await fetch('https://raw.githubusercontent.com/NewYorkCityCouncil/dss_eviction_moratorium/master/data/evictions_monthly_trend.csv');
+    const response = await fetch('https://newyorkcitycouncil.github.io/dss_eviction_moratorium/data/evictions_monthly_trend.csv');
     const data = await response.text();
 
     const table = data.split('\n').slice(1);
