--- a/templates/linechartmulti29/index.html
+++ b/templates/linechartmulti29/index.html
@@ -160,7 +160,7 @@ Chart.defaults.global.title.display = true
         yAxes: [{
           stacked: false,
           ticks: {
-            //max: 5,
+          max: 25000,
             //min: 200000,
             //stepSize: 200000,
             callback: function(value, index, values) {
