--- a/templates/linechartmulti32/index.html
+++ b/templates/linechartmulti32/index.html
@@ -184,7 +184,7 @@
         yAxes: [{
           stacked: false,
           ticks: {
-            //max: 5,
+            max: 14000,
             //min: 200000,
             //stepSize: 200000,
             callback: function(value, index, values) {
