--- a/templates/linechartmulti24/index.html
+++ b/templates/linechartmulti24/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-  <canvas id ="chart" width="800" height="400"></canvas>
+<canvas id ="chart" width="800" height="400" role="figure" aria-label="Jobs in the arts were consistently at 90,000 or more in 2019. In 2020, jobs in the art drastically dropped form 86,000 to 34,000 between March and April, and remains under 35,000 through the rest of the year"></canvas>
   <script>
   //CHART JS
   Chart.defaults.global.legend.display = true,
