--- a/templates/bar24/index.html
+++ b/templates/bar24/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
   <title>Number of Employees by Age Group</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-  <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts
+  <!--Source of Rounded Chart: https://github.com/jedtrow/Chart.js-Rounded-Bar-Charts-->
     <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.js"></script>
-  <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.min.js"></script>-->
+  <script type="text/javascript" charset="utf-8" src="Chart.roundedBarCharts.min.js"></script>
 
 </head>
 <body>
-  <canvas id ="chart"width="600" height="400"></canvas>
+  <canvas id ="chart" width="600" height="300"></canvas>
   <script>
   //CHART JS
   Chart.defaults.global.responsive = true,
@@ -64,7 +64,7 @@
               beginAtZero: true,
             },
             gridLines: {
-              display: false
+              display: true
             },
             scaleLabel: {
               display: true,
