--- a/templates/bar27/index.html
+++ b/templates/bar27/index.html
@@ -112,7 +112,7 @@
       const one = columns[0];
       xs.push(one);
       const two = columns[2];
-      ys.push(parseFloat(two)); //make data from string to number and added mean payers of 14 degrees
+      ys.push(parseFloat(two)); //make data from string to number
       console.log(one, two);
     });
     return { xs, ys };
