--- a/templates/bar24/index.html
+++ b/templates/bar24/index.html
@@ -12,12 +12,12 @@
 
 </head>
 <body>
-  <canvas id ="chart" width="600" height="300"></canvas>
+  <canvas id ="chart" width="800" height="400"></canvas>
   <script>
   //CHART JS
-  Chart.defaults.global.responsive = true,
-  Chart.defaults.global.legend.display = false,
-  Chart.defaults.global.maintainAspectRatio = false
+//  Chart.defaults.global.responsive = true,
+  Chart.defaults.global.legend.display = false
+//  Chart.defaults.global.maintainAspectRatio = false
 
 
   chartIt();
@@ -30,16 +30,19 @@
       data: {
         labels: data.xs,
         datasets: [{
-          label: 'Workers by Age Group',
+          label: 'Employees by Age Group',
           data: data.ys,
           backgroundColor: '#2F56A6',
           borderColor: '#eeeeee',
-          borderWidth: 0,
+          borderWidth: 1,
+          lineTension: 4,
           hoverBackgroundColor: "#9E9E9E",
           hoverBorderColor: "#eeeeee",
+          barPercentage: .8
         }]
       },
       options: {
+        cornerRadius: 20,
         scales:{
           xAxes: [{
             ticks: {
@@ -60,15 +63,14 @@
             ticks: {
               callback: function(value, index, values) {
                 return value.toLocaleString('en-US');
-              },
-              beginAtZero: true,
+              }
             },
             gridLines: {
               display: true
             },
             scaleLabel: {
               display: true,
-              labelString: 'Workers'
+              labelString: 'Employees'
             }
           }]
         },
