--- a/templates/bar30/index.html
+++ b/templates/bar30/index.html
@@ -79,7 +79,7 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Salary'
+              labelString: 'Median Salary'
             }
           }]
         },
