--- a/templates/bubble02/index.html
+++ b/templates/bubble02/index.html
@@ -27,33 +27,116 @@
     const myChart = new Chart(ctx, {
       type: 'bubble',
       data: {
-        labels: 'chart',
+
         datasets: [
           {
-            label: ['less than 20'],
-            data:
-            [{
-              x: 1,
-              y: 13,
-              r: 38183
+            label: 'less than 20',
+              backgroundColor:"#2F56A6",
+              borderColor: "#23417D",
+            data: [{
+              x: 18,
+              y: 38183,
+              r: 0.01
             }]
           },
           {
-            label: ['20-24'],
-            data:
-            [{
-              x: 2,
-              y: 4208,
-              r: 42500
+            label: '20-24',
+            backgroundColor:"#2F56A6",
+            borderColor: "#23417D",
+            data: [{
+              x: 20,
+              y: 42500,
+              r: 2.61
             }]
           },
           {
-            label: ['25-29'],
-            data:
-            [{
-              x: 3,
-              y: 17164,
-              r: 50720
+            label: '25-29',
+            backgroundColor:"#2F56A6",
+            borderColor: "#23417D",
+            data: [{
+              x: 25,
+              y: 50720,
+              r: 10.64
+            }]
+          },
+          {
+            label: '30-34',
+            backgroundColor:"#2F56A6",
+            borderColor: "#23417D",
+            data: [{
+              x: 30,
+              y: 62247,
+              r: 14.77
+            }]
+          },
+          {
+            label: '35-39',
+            backgroundColor:"#2F56A6",
+            borderColor: "#23417D",
+            data: [{
+              x: 35,
+              y: 82437,
+              r: 15.48
+            }]
+          },
+          {
+            label: '40-44',
+            backgroundColor:"#2F56A6",
+            borderColor: "#23417D",
+            data: [{
+              x: 40,
+              y: 85292,
+              r: 13.98
+            }]
+          },
+          {
+            label: '45-49',
+            backgroundColor:"#2F56A6",
+            borderColor: "#23417D",
+            data: [{
+              x: 45,
+              y: 85292,
+              r: 12.33
+            }]
+          },
+          {
+            label: '50-54',
+            backgroundColor:"#2F56A6",
+            borderColor: "#23417D",
+            data: [{
+              x: 50,
+              y: 75591,
+              r: 11.19
+            }]
+          },
+          {
+            label: '55-59',
+            backgroundColor:"#2F56A6",
+            borderColor: "#23417D",
+            data: [{
+              x: 55,
+              y: 67987,
+              r: 9.79
+            }]
+          },
+          {
+            label: '60-64',
+            backgroundColor:"#2F56A6",
+            borderColor: "#23417D",
+            data: [{
+              x: 60,
+              y: 65171,
+              r: 6.18
+            }]
+          },
+          {
+            label: '65 & over',
+            backgroundColor:"#2F56A6",
+            borderColor: "#23417D",
+            data: [{
+              x: 65,
+              y: 62961,
+              r: 3.02
             }]
           }
         ]
@@ -62,7 +145,7 @@
         cornerRadius: 20,
         title:{
           display: false,
-          text: 'DFTA'
+          text: 'Salary and Age'
         },
         scales: {
           xAxes: [{
@@ -78,14 +161,15 @@
             },
             scaleLabel: {
               display: true,
-              labelString: 'Median Age (Years)'
+              labelString: 'Age (Years)'
             }
           }],
           yAxes: [{
             ticks: {
               callback: function(value, index, values) {
-                return value +'%';
+                return '$'+value.toLocaleString('en-US');
               },
+              beginAtZero: true,
               //fontStyle: 'strong'
               //fontSize: 9,
             },
@@ -94,47 +178,49 @@
             },
             scaleLabel: {
               display: true,
-              labelString: '% of DFTA'
+              labelString: 'Median Salary ($)'
             }
           }]
-        },
-        tooltips: {
-          callbacks: {
-            label: function(tooltipItem, data) {
-              return data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' %';
-            },
-          },
-          backgroundColor: '#434343',
-          borderColor: '#f5f5f5',
-          borderWidth: 1,
-          displayColors: false
         }
-      }
-    });
-  }
+        /*   ,
+        tooltips: {
+        callbacks: {
+        label: function(tooltipItem, data) {
+        return ['Age Group: '+tooltipItem.xLabel.toLocaleString()+', Median Salary: $'+tooltipItem.yLabel.toLocaleString()+', Employees in Age / Salary Group: '+ r.toLocaleString()
+        //  return all.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' %';
+      ]},
+    },
+    backgroundColor: '#434343',
+    borderColor: '#f5f5f5',
+    borderWidth: 1,
+    displayColors: false
+  }*/
+}
+});
+}
 
-  //SPLITTING AND BRINGING IN CSV DATA
+//SPLITTING AND BRINGING IN CSV DATA
 
-  async function getData() {
-    const xs = [];
-    const ys = [];
+async function getData() {
+  const xs = [];
+  const ys = [];
 
-    const response = await fetch('Number_of_Employees_by_Age_Group.csv');
-    const data = await response.text();
+  const response = await fetch('Number_of_Employees_by_Age_Group.csv');
+  const data = await response.text();
 
-    const table = data.split('\n').slice(1);
-    table.forEach(row => {
-      const columns = row.split(',');
-      const one = columns[0];
-      xs.push(one);
-      const two = columns[2];
-      ys.push(parseFloat(two)); //make data from string to number and added mean payers of 14 degrees
-      console.log(one, two);
-    });
-    return { xs, ys };
-  }
+  const table = data.split('\n').slice(1);
+  table.forEach(row => {
+    const columns = row.split(',');
+    const one = columns[0];
+    xs.push(one);
+    const two = columns[2];
+    ys.push(parseFloat(two)); //make data from string to number and added mean payers of 14 degrees
+    console.log(one, two);
+  });
+  return { xs, ys };
+}
 
 
-  </script>
+</script>
 </body>
 </html>
