--- a/templates/bargrouped02/index.html
+++ b/templates/bargrouped02/index.html
@@ -52,7 +52,7 @@
           barPercentage: .8
         },
         {
-          label: 'Ethnicity Unknown',
+          label: 'Unknown',
           data: data.ys3,
           fill: false,
           backgroundColor: '#6C6347',
